@@ -14,7 +14,7 @@ public class CustomerService {
     CustomerRepository customerRepository;
 
     public List<Customer> getAllCustomers() {
-        return customerRepository.findAll().stream().toList();
+        return customerRepository.findAll().stream().collect(Collectors.toList());
     }
 
     // 과제 4-1 전체 평균마일리지보다 큰 마일리지를 가진 고객들을 조회하는 API
@@ -24,6 +24,6 @@ public class CustomerService {
 
     // 과제 4-2 마일리지등급을 매개변수로 해당 마일리지등급을 가진 고객들을 조회하는 API
     public List<Customer> getCustomersByMileageGrade(String grade) {
-        return customerRepository.findByGradeName(grade).stream().collect(Collectors.toList());
+        return null;
     }
 }
